tests/fixtures/diagnostics/compile-undefined-variable.ascii.stderr
Error: Undefined variable.
  ,
2 |   color: $undefined-var;
  |          ^^^^^^^^^^^^^^
  '
  compile-undefined-variable.scss 2:10  root stylesheet
